[package]
name = "drand-substrate-client"
version = "0.1.0"
authors = ["Bacon <bacon.randomness.beacon@pm.me, Ham <none@github.com>"]
edition = "2021"
description = "substrate client for drand"
repository = "https://github.com/random-meat/drand-substrate-client"
license-file = "LICENSE"

[dependencies]
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
log = { version = "0.4.17", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
drand-verify = "0.3.0"

[features]
default = ["std"]
std = ["sp-runtime/std", "sp-io/std", "sp-std/std", "frame-support/std"]
